force-app/main/default/objects/Location__c/fields/Commercial_Properties_Identified__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Properties_Identified__c</fullName>
    <label>Commercial Properties Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>