force-app/main/default/objects/Location__c/fields/Land_Id__c.field-meta.xml
<CustomField>
    <fullName>Land_Id__c</fullName>
    <label>Land Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>