force-app/main/default/objects/Location__c/fields/Land_Plot_Status__c.field-meta.xml
<CustomField>
    <fullName>Land_Plot_Status__c</fullName>
    <label>Land Plot Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>