force-app/main/default/objects/Location__c/fields/Land_Plots__c.field-meta.xml
<CustomField>
    <fullName>Land_Plots__c</fullName>
    <label>Land Plots</label>
    <length>255</length>
    <type>Text</type>
</CustomField>