force-app/main/default/objects/Location__c/fields/Landlord_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Contacts__c</fullName>
    <label>Landlord Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>