force-app/main/default/objects/Location__c/fields/Landlord_Names__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Names__c</fullName>
    <label>Landlord Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>