force-app/main/default/objects/Location__c/fields/Landlords_Contacted_last_45_Days__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Contacted_last_45_Days__c</fullName>
    <label>Landlords Contacted, last 45 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>