force-app/main/default/objects/Location__c/fields/Landlords_Id__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Id__c</fullName>
    <label>Landlords Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>