force-app/main/default/objects/Location__c/fields/No_of_Listings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Listings__c</fullName>
    <label>No of Listings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>