force-app/main/default/objects/Location__c/fields/No_of_Property_Management_Identified__c.field-meta.xml
<CustomField>
    <fullName>No_of_Property_Management_Identified__c</fullName>
    <label>No of Property Management Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>