force-app/main/default/objects/Location__c/fields/Residential_Properties_Identified__c.field-meta.xml
<CustomField>
    <fullName>Residential_Properties_Identified__c</fullName>
    <label>Residential Properties Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>